# docs/api/openapi.json
@@ -348,42 +348,6 @@
         "title": "AvailableProjectUser",
         "type": "object"
       },
-      "ClientConfigurationResponse": {
-        "additionalProperties": false,
-        "properties": {
-          "expires_at": {
-            "anyOf": [
-              {
-                "type": "string"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Expires At"
-          },
-          "key_id": {
-            "title": "Key Id",
-            "type": "string"
-          },
-          "publishable_key": {
-            "title": "Publishable Key",
-            "type": "string"
-          },
-          "supabase_url": {
-            "title": "Supabase Url",
-            "type": "string"
-          }
-        },
-        "required": [
-          "supabase_url",
-          "publishable_key",
-          "key_id",
-          "expires_at"
-        ],
-        "title": "ClientConfigurationResponse",
-        "type": "object"
-      },
       "CollaborationHintItem": {
         "additionalProperties": true,
         "properties": {
@@ -10559,48 +10523,6 @@
         "summary": "Proxy Project Meta",
         "tags": [
           "project-insights"
-        ]
-      }
-    },
-    "/config/{application_ref}": {
-      "get": {
-        "operationId": "get_client_configuration_config__application_ref__get",
-        "parameters": [
-          {
-            "in": "path",
-            "name": "application_ref",
-            "required": true,
-            "schema": {
-              "title": "Application Ref",
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ClientConfigurationResponse"
-                }
-              }
-            },
-            "description": "Successful Response"
-          },
-          "422": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
-                }
-              }
-            },
-            "description": "Validation Error"
-          }
-        },
-        "summary": "Get Client Configuration",
-        "tags": [
-          "client-configuration"
         ]
       }
     }
